# ml-on-the-mind

./: .gitignore  .pdm-python  Dockerfile  Dockerfile.marqo  README.md  app.py  docker-compose.yml  load_data.py  openneuro_datasets.json  pyproject.toml  requirements.txt
download/: download_openneuro.py
src/ml_on_the_mind/: app.py  build_vector_db.py
src/ml_on_the_mind/data/: data_schema.py  utils.py
src/ml_on_the_mind/download/: base_downloader.py  dandi_downloader.py  openneuro_downloader.py
