[project]
name = "ml-on-the-mind"
version = "0.1.0"
description = "Semantic search interface for neuroscience datasets"
authors = [
    {name = "ijight", email = "ianjarrattknight@gmail.com"},
]
dependencies = [
    "marqo>=0.11.0",
    "streamlit",
    "tqdm",
    "dandi",
]
requires-python = ">=3.9,<3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
